# 23202-barybina-oop-cpp

./: README.md
0b/: CSVFileWriter.cpp  Reader.cpp  Splitter.cpp
0b/GoogleTests/: csvFileWriterTests.h  splitterTests.h
Task0b/: CMakeLists.txt  CSVFileWriter.cpp  CSVFileWriter.h  Reader.cpp  Reader.h  Splitter.cpp  Splitter.h  WordsStatistics.cpp  WordsStatistics.h  input1.txt  input_file.txt  main.cpp
Task0b/GoogleTests/: csvFileWriterTests.h  readerTests.h  splitterTests.h  wordsStatisticsTests.h
Task1/: BitArray.cpp  BitArray.h  BitReference.cpp  BitReference.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  main.cpp
Task1/GoogleTests/: BitArrayTests.h
task2/: CMakeLists.txt  Command.cpp  Command.h  DumpCommand.h  FileHandler.cpp  FileHandler.h  FileWriter.cpp  FileWriter.h  GameCommandPrompt.cpp  GameCommandPrompt.h  GameState.cpp  GameState.h  HELP.txt  MatrixProxy.cpp  MatrixProxy.h  Reader.cpp  RuleParser.cpp  RuleParser.h  StateCounter.cpp  StateCounter.h  TickCommand.h  UniverseCharacteristicsParser.cpp  UniverseCharacteristicsParser.h  UniverseConfig.cpp  UniverseConfig.h  main.cpp
task2/GoogleTests/: FileHandlerTests.h  GameCommandPromptTests.h  GameStateTests.h  RuleParserTests.h  StateCounterTests.h  UniverseCharacteristicsParserTests.h  testFile.h
